reproduce localize issue

--- a/src/locale/message.fr.json
+++ b/src/locale/message.fr.json
@@ -1,8 +1,10 @@
 {
   "locale": "fr",
   "translations": {
-    "4608414764123111425": "compter: {$PH}",
     "8399228546444251220": "Exemple de compteur",
+    "4608414764123111425": "compter: {$PH}",
+    "5233670622101578369": "singulier",
+    "6492228435155670681": "pluriel",
     "2954233255021387859": "incrément"
   }
 }
