--- a/src/locale/message.en.json
+++ b/src/locale/message.en.json
@@ -1,8 +1,10 @@
 {
   "locale": "en",
   "translations": {
-    "4608414764123111425": "count: {$PH}",
     "8399228546444251220": "Counter Example",
+    "4608414764123111425": "count: {$PH}",
+    "5233670622101578369": "singular",
+    "6492228435155670681": "plural",
     "2954233255021387859": "increment"
   }
 }
